force-app/main/default/objects/Case/fields/NEP_Alert_Summary__c.field-meta.xml
<CustomField>
    <fullName>NEP_Alert_Summary__c</fullName>
    <label>Alert Summary</label>
    <description>Plain-language summary carried over from the escalating NEP_SensorReading__c.Plain_Language_Summary__c.</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>