force-app/main/default/objects/Case/fields/NEP_SensorReading__c.field-meta.xml
<CustomField>
    <fullName>NEP_SensorReading__c</fullName>
    <label>Sensor Reading</label>
    <description>The High/Critical NEP_SensorReading__c that triggered this escalation Case.</description>
    <type>Lookup</type>
    <referenceTo>NEP_SensorReading__c</referenceTo>
    <relationshipName>NEP_Escalation_Cases</relationshipName>
    <relationshipLabel>NEP Escalation Cases</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>