force-app/main/default/objects/Case/fields/NEP_Severity__c.field-meta.xml
<CustomField>
    <fullName>NEP_Severity__c</fullName>
    <label>Turbine Alert Severity</label>
    <description>Severity carried over from the escalating NEP_SensorReading__c. High and Critical only — Normal/Medium readings never escalate.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>