force-app/main/default/objects/Case/fields/NEP_Turbine__c.field-meta.xml
<CustomField>
    <fullName>NEP_Turbine__c</fullName>
    <label>Turbine</label>
    <description>Turbine Asset linked from the escalating NEP_SensorReading__c, when matched. Null for Cases raised from an unmatched reading.</description>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipName>NEP_Escalation_Cases</relationshipName>
    <relationshipLabel>NEP Escalation Cases</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>