force-app/main/default/objects/Case/fields/NEP_Unmatched__c.field-meta.xml
<CustomField>
    <fullName>NEP_Unmatched__c</fullName>
    <label>From Unmatched Reading</label>
    <description>True when this Case was raised from a sensor reading that could not be matched to a turbine Asset.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>